[tool.poetry]
name = "tommorow_stock_price_forecast_app"
version = "0.1.0"
description = ""
authors = ["Shouhei Takai <shouheitakai.me@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
selenium = "^4.1.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.7.1"
pandas-datareader = "^0.10.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
yahoo-finance-api2 = "^0.0.12"
mpl-finance = "^0.10.1"
mplfinance = "^0.12.8-beta.9"
tensorflow = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
